--- a/Atividades/Grammar - Copy/index.html
+++ b/Atividades/Grammar - Copy/index.html
@@ -271,8 +271,7 @@
     // ESTA É A FUNÇÃO QUE LÊ O ARQUIVO "texto.txt"
     // E MOSTRA SEU CONTEÚDO NA PÁGINA, INCLUINDO TÍTULO,
     // SEÇÕES, TABELAS, NEGRITO/ITÁLICO E CAMPOS DE RESPOSTA.
-    // TAMBÉM RECONHECE "##" COMO SUBTÍTULO EM CAIXA ALTA
-    // E CONVERTE "#IMG:arquivo.png" EM <img>.
+    // TAMBÉM RECONHECE "##" COMO SUBTÍTULO EM CAIXA ALTA.
     // ======================================================
     function loadTextFile() {
         if (isTextFileLoaded) {
@@ -348,13 +347,6 @@
                         } else {
                             htmlContent += '<tr>' + columns.map(col => `<td>${col.trim()}</td>`).join('') + '</tr>';
                         }
-                    }
-                    // Detectando linhas de imagem "#IMG:algumaCoisa.png"
-                    else if (trimmedLine.startsWith('#IMG:')) {
-                        const imageFileName = trimmedLine.replace('#IMG:', '').trim();
-                        // Caminho dinâmico da imagem (mesma pasta de texto.txt)
-                        const imagePath = `../../${level}/${unit}/DataGrammar/${imageFileName}`;
-                        htmlContent += `<div class="image-container"><img src="${imagePath}" alt="Image"></div>`;
                     }
                     // Linhas com [Answer: ...] => cria campo de texto, botão "Check" e conta no totalAnswers
                     else if (trimmedLine.includes('[Answer:')) {
