--- a/Atividades/Exerciciosdegramatica/index.html
+++ b/Atividades/Exerciciosdegramatica/index.html
@@ -614,26 +614,20 @@
         while (i < lines.length) {
             let raw = lines[i];
             let line = raw.trim();
-
-            // (MODIFICAÇÃO) Log opcional para debug
-            // console.log("TXT =>", line);
-
             if (!line) {
                 nextLine();
                 continue;
             }
 
-            //============== TÍTULO ==============
-            // (MODIFICAÇÃO) Aceita "#TITLE:" ou "TITLE:"
-            let lineUpper = line.toUpperCase();
-            if (lineUpper.startsWith('#TITLE:') || lineUpper.startsWith('TITLE:')) {
-                let titleText = line.substring(line.indexOf(':') + 1).trim();
+            //-------------- #TITLE --------------
+            if (line.toUpperCase().startsWith('#TITLE:')) {
+                let titleText = line.substring(7).trim();
                 htmlAccum += `<h2 class="exercise-title">${titleText}</h2>`;
                 nextLine();
                 continue;
             }
 
-            //============== EXERCISE X: ==============
+            //-------------- Exercise X: --------------
             if (/^Exercise\s+\d+:/i.test(line)) {
                 currentExerciseIndex++;
                 exercisesMapping[currentExerciseIndex] = { questions: [] };
@@ -643,28 +637,21 @@
                 continue;
             }
 
-            //============== #IMG: (pode estar em qualquer parte da linha) ==============
-            // (MODIFICAÇÃO) Agora usa includes('#IMG:'), e extrai via regex
-            if (lineUpper.includes('#IMG:')) {
-                // Acha o que vem depois de "#IMG:"
-                let match = line.match(/#IMG:\s*(.+)/i);
-                if (match) {
-                    let file = match[1].trim();
-                    htmlAccum += `<div class="exercise-line"><img data-imgfile="${file}" style="max-width:100%; height:auto;" alt="Image" crossorigin="anonymous"></div>`;
-                    nextLine();
-                    continue;
-                }
+            //-------------- #IMG --------------
+            if (line.toUpperCase().startsWith('#IMG:')) {
+                let file = line.substring(5).trim();
+                htmlAccum += `<div class="exercise-line"><img data-imgfile="${file}" style="max-width:100%; height:auto;" alt="Image" crossorigin="anonymous"></div>`;
+                nextLine();
+                continue;
             }
 
-            //============== TABLE  ==============
-            // (MODIFICAÇÃO) Para compatibilidade: procura #TABLE ou TableStart
-            if (lineUpper.startsWith('#TABLE') || lineUpper.startsWith('TABLESTART')) {
+            //-------------- #TABLE --------------
+            if (line.toUpperCase().startsWith('#TABLE')) {
                 let tableLines = [];
                 nextLine();
                 while (i < lines.length) {
                     let check = lines[i].trim().toUpperCase();
-                    // (MODIFICAÇÃO) Aceita #ENDTABLE ou TableEnd
-                    if (check.startsWith('#ENDTABLE') || check.startsWith('TABLEEND')) {
+                    if (check.startsWith('#ENDTABLE')) {
                         nextLine();
                         break;
                     }
@@ -685,8 +672,8 @@
                 continue;
             }
 
-            //============== #BOX  ==============
-            if (lineUpper.startsWith('#BOX')) {
+            //-------------- #BOX --------------
+            if (line.toUpperCase().startsWith('#BOX')) {
                 let boxLines = [];
                 nextLine();
                 while (i < lines.length) {
@@ -707,21 +694,21 @@
                 continue;
             }
 
-            //============== #MULTIPLE_CHOICE  ==============
-            if (lineUpper.startsWith('#MULTIPLE_CHOICE:')) {
+            //-------------- #MULTIPLE_CHOICE --------------
+            if (line.toUpperCase().startsWith('#MULTIPLE_CHOICE:')) {
                 let questionText = line.substring(17).trim();
                 let questionIndex = questionObjects.length;
                 let options = [];
                 let corrLetter = null;
                 nextLine();
                 while (i < lines.length) {
-                    let check = lines[i].trim().toUpperCase();
-                    if (check.startsWith('#END_MULTIPLE_CHOICE')) {
+                    let check = lines[i].trim();
+                    if (check.toUpperCase().startsWith('#END_MULTIPLE_CHOICE')) {
                         nextLine();
                         break;
                     }
-                    if (check.startsWith('#CORRECT:')) {
-                        corrLetter = lines[i].substring(9).trim();
+                    if (check.toUpperCase().startsWith('#CORRECT:')) {
+                        corrLetter = check.substring(9).trim();
                         nextLine();
                     } else {
                         options.push(lines[i]);
@@ -747,8 +734,8 @@
                 continue;
             }
 
-            //============== #TRUE_FALSE  ==============
-            if (lineUpper.startsWith('#TRUE_FALSE:')) {
+            //-------------- #TRUE_FALSE --------------
+            if (line.toUpperCase().startsWith('#TRUE_FALSE:')) {
                 let statement = line.substring(11).trim();
                 let questionIndex = questionObjects.length;
                 let correctVal = 'V';
@@ -786,8 +773,8 @@
                 continue;
             }
 
-            //============== #MATCHING  ==============
-            if (lineUpper.startsWith('#MATCHING:')) {
+            //-------------- #MATCHING --------------
+            if (line.toUpperCase().startsWith('#MATCHING:')) {
                 let questionIndex = questionObjects.length;
                 let pairs = [];
                 nextLine();
@@ -827,8 +814,8 @@
                 continue;
             }
 
-            //============== #ORDERING  ==============
-            if (lineUpper.startsWith('#ORDERING:')) {
+            //-------------- #ORDERING --------------
+            if (line.toUpperCase().startsWith('#ORDERING:')) {
                 let questionIndex = questionObjects.length;
                 let items = [];
                 let correctPositions = [];
@@ -836,12 +823,11 @@
 
                 while (i < lines.length) {
                     let check = lines[i].trim();
-                    let checkU = check.toUpperCase();
-                    if (checkU.startsWith('#END_ORDERING')) {
+                    if (check.toUpperCase().startsWith('#END_ORDERING')) {
                         nextLine();
                         break;
                     }
-                    if (checkU.startsWith('#CORRECT_ORDER:')) {
+                    if (check.toUpperCase().startsWith('#CORRECT_ORDER:')) {
                         let seq = check.substring(14).trim();
                         correctPositions = seq.split(',').map(x => {
                             let cleaned = x.replace(/[^\d]/g, '').trim(); 
@@ -877,7 +863,7 @@
                 continue;
             }
 
-            //============== [Answer: ] e [FreeText]  ==============
+            //-------------- [Answer: ] e [FreeText] --------------
             if (line.includes('[Answer:') && line.includes('[FreeText]')) {
                 let [qPart, aPart] = line.split('[Answer:');
                 let correctVal = aPart.split(']')[0].trim();
@@ -896,6 +882,7 @@
                 let cleanedQ = qPart.replace(/\[size:.*?\]/,'').trim();
                 let placeholderIndex = questionObjects.length;
 
+                // Monta a parte do input de resposta corrigida
                 htmlAccum += `<div class="exercise-line" data-question-idx="${placeholderIndex}" data-qtype="textInputWithFreeText">`;
                 if (!useTextarea) {
                     cleanedQ = cleanedQ.replace('___', `<input type="text" class="answer-input" style="width:${inputSize};" />`);
@@ -904,7 +891,7 @@
                 }
                 htmlAccum += `${cleanedQ}<span class="correct-answer-span"></span></div>`;
 
-                // Texto livre
+                // Monta a parte do texto livre
                 htmlAccum += `<div class="exercise-line"><span class="free-text-span"><input type="text" class="free-text-input" /></span></div>`;
 
                 questionObjects.push({
@@ -966,7 +953,7 @@
                 continue;
             }
 
-            // Se não caiu em nenhum caso especial, é texto comum
+            //-------------- Se não caiu em nada, é texto simples --------------
             htmlAccum += `<div class="exercise-line">${line}</div>`;
             nextLine();
         }
@@ -981,7 +968,7 @@
         // Renderizamos cada tipo
         questionObjects.forEach((qObj) => {
 
-            // multipleChoice
+            // ---------- multipleChoice ----------
             if (qObj.qtype === 'multipleChoice') {
                 let cID = `multichoice_container_${qObj.index}`;
                 let containerDOM = container.querySelector(`#${cID}`);
@@ -1006,7 +993,7 @@
                 qObj.containerDOM = containerDOM;
             }
 
-            // trueFalse
+            // ---------- trueFalse ----------
             else if (qObj.qtype === 'trueFalse') {
                 let cID = `truefalse_container_${qObj.index}`;
                 let containerDOM = container.querySelector(`#${cID}`);
@@ -1023,7 +1010,7 @@
                 qObj.containerDOM = containerDOM;
             }
 
-            // matching
+            // ---------- matching ----------
             else if (qObj.qtype === 'matching') {
                 let cID = `matching_container_${qObj.index}`;
                 let containerDOM = container.querySelector(`#${cID}`);
@@ -1042,7 +1029,7 @@
                 qObj.containerDOM = containerDOM;
             }
 
-            // ordering
+            // ---------- ordering ----------
             else if (qObj.qtype === 'ordering') {
                 let cID = `ordering_container_${qObj.index}`;
                 let containerDOM = container.querySelector(`#${cID}`);
@@ -1062,7 +1049,7 @@
             }
         });
 
-        // textInput
+        // ---------- textInput ----------
         let textLines = container.querySelectorAll('[data-qtype]');
         textLines.forEach(tLine => {
             let qIdx = parseInt(tLine.getAttribute('data-question-idx'),10);
@@ -1075,7 +1062,7 @@
             }
         });
 
-        // associando inputs em matching
+        // ---------- associando inputs em matching ----------
         questionObjects.forEach((qObj) => {
             if (qObj.qtype === 'matching') {
                 let cDOM = qObj.containerDOM;
@@ -1101,11 +1088,8 @@
             return;
         }
 
-        // Caminho usado para buscar o exercicios.txt e as imagens do texto
         const basePath = `../../../../${level}/${unit}/DataExerciciosdaGramatica/`;
-
         try {
-            // Carrega o arquivo de texto
             const response = await fetch(`${basePath}exercicios.txt`);
             if (!response.ok) throw new Error(`Error loading file: ${basePath}exercicios.txt`);
 
@@ -1119,12 +1103,10 @@
             // Renderiza as questões
             renderQuestions(container);
 
-            // Ajuste principal: as imagens referenciadas no texto (via #IMG:)
-            // são carregadas do MESMO local do texto.txt
+            // Insere imagens
             let allImgTags = container.querySelectorAll('img[data-imgfile]');
             allImgTags.forEach(imgTag => {
                 let fname = imgTag.getAttribute('data-imgfile');
-                // Carrega do mesmo path do texto
                 imgTag.src = basePath + fname;
             });
 
@@ -1184,11 +1166,11 @@
       doc.html(containerClone, {
         x: 10,
         y: 10,
-        width: 580,
+        width: 580,           // Um pouco mais que 560 para aproveitar mais a página, mas ainda cabendo
         windowWidth: 800,
         autoPaging: 'text', 
         html2canvas: {
-          scale: 0.6,
+          scale: 0.6,        // Reduz ligeiramente para evitar corte na horizontal
           useCORS: true
         },
         callback: function(pdf) {
