--- a/Atividades/LEX/index - Copy (2).html
+++ b/Atividades/LEX/index - Copy (2).html
@@ -253,9 +253,7 @@
 
                 try {
                     console.log("[index.html] Enviando mensagem do usuário para /api/chat...");
-
-                    // 🔴 ALTERAÇÃO: Usamos a URL do backend no Render:
-                    const response = await fetch('https://hannah-backend.onrender.com/api/chat', {
+                    const response = await fetch('/api/chat', {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
                         body: JSON.stringify({ uid: userId, message: userSpeech, chatHistory }),
@@ -308,8 +306,8 @@
                 const playbackSpeed = parseFloat(speedSlider.value) || 1.0;
                 console.log("[index.html] Enviando texto para /api/tts:", text, "com playbackSpeed:", playbackSpeed);
 
-                // 🔴 ALTERAÇÃO: URL do backend no Render
-                const resp = await fetch('https://hannah-backend.onrender.com/api/tts', {
+                // Envia texto + playbackSpeed para o endpoint TTS
+                const resp = await fetch('/api/tts', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ text, speakingRate: playbackSpeed }),
@@ -389,12 +387,11 @@
                         userInput.value = "";
                         console.log("[index.html] Usuário digitou via fallback:", userMessage);
 
+                        // Se quiser processar via fallback, faz chamada fetch ao /api/chat:
                         if (userId) {
                             try {
                                 console.log("[index.html] Enviando mensagem do usuário (fallback) para /api/chat...");
-
-                                // 🔴 ALTERAÇÃO: URL do backend no Render
-                                const response = await fetch('https://hannah-backend.onrender.com/api/chat', {
+                                const response = await fetch('/api/chat', {
                                     method: 'POST',
                                     headers: { 'Content-Type': 'application/json' },
                                     body: JSON.stringify({ uid: userId, message: userMessage, chatHistory }),
@@ -432,9 +429,7 @@
 
                     try {
                         console.log("[index.html] Chamando /api/start com UID, level e unit...");
-
-                        // 🔴 ALTERAÇÃO: URL do backend no Render
-                        const response = await fetch(`https://hannah-backend.onrender.com/api/start?uid=${userId}&level=${level}&unit=${unit}`);
+                        const response = await fetch(`/api/start?uid=${userId}&level=${level}&unit=${unit}`);
                         if (!response.ok) throw new Error("Failed to initialize conversation.");
 
                         console.log("[index.html] Resposta OK de /api/start. Lendo JSON...");
