--- a/Apresentacao/propaganda_port.html
+++ b/Apresentacao/propaganda_port.html
@@ -133,118 +133,28 @@
     </style>
 </head>
 <body>
-    <button class="back-button" onclick="goBack()">VOLTAR</button>
+    <button class="back-button" onclick="goBack()">BACK</button>
     <div class="container">
         <h1>Bem-vindo à Sua Jornada de Aprendizado em Inglês</h1>
         <p>
-            Mergulhe no mundo do aprendizado de inglês por meio de histórias bíblicas envolventes. Nossas ferramentas interativas foram projetadas para tornar sua experiência significativa e agradável.
+            Mergulhe no mundo do aprendizado de inglês por meio de histórias bíblicas envolventes. Nossas ferramentas interativas, incluindo Conversação com IA, StoryCards, Flashcards, Jogos, Gramática e muito mais, foram projetadas para tornar sua experiência de aprendizado significativa e agradável. Explore cada seção para descobrir com é possível melhorar seu vocabulário, gramática, pronúncia e habilidades de conversação, tudo enquanto se conecta com narrativas bíblicas atemporais.
         </p>
         <div class="links">
-            <a href="#" class="topic-link" data-popup="storycards-popup">StoryCards</a>
-            <a href="#" class="topic-link" data-popup="flashcards-popup">Flashcards</a>
-            <a href="#" class="topic-link" data-popup="memorygame-popup">Memory Game</a>
-            <a href="#" class="topic-link" data-popup="wordsearch-popup">Word Search</a>
-            <a href="#" class="topic-link" data-popup="grammar-popup">Grammar</a>
-            <a href="#" class="topic-link" data-popup="quizzes-popup">Quizzes</a>
-            <a href="#" class="topic-link" data-popup="speak-popup">Speak Cards</a>
-            <a href="#" class="topic-link" data-popup="hannahvideos-popup">HannahVideos</a>
-            <a href="#" class="topic-link" data-popup="lessons-popup">Lifes Lessons</a>
-            <a href="#" class="topic-link" data-popup="spelling-tools-popup">Spelling Tools</a>
-            <a href="#" class="topic-link" data-popup="tests-popup">Tests</a>
+            <a href="#" class="topic-link" data-popup="storycards-popup">StoryCards: Aprenda inglês com histórias bíblicas</a>
+            <a href="#" class="topic-link" data-popup="flashcards-popup">Flashcards: Reforce o vocabulário de forma interativa</a>
+            <a href="#" class="topic-link" data-popup="memorygame-popup">Memory Game: Melhore o vocabulário brincando</a>
+            <a href="#" class="topic-link" data-popup="wordsearch-popup">Word Search: Divirta-se com caça-palavras de vocabulário</a>
+            <a href="#" class="topic-link" data-popup="grammar-popup">Grammar: Domine o inglês no contexto</a>
+            <a href="#" class="topic-link" data-popup="quizzes-popup">Quizzes: Jogo de perguntas interativo com feedback imediato</a>
+            <a href="#" class="topic-link" data-popup="speak-popup">Speak Cards: Pratique sua pronúncia com avaliação instantânea</a>
+            <a href="#" class="topic-link" data-popup="hannahvideos-popup">HannahVideos: Aprendizado dinâmico por meio de vídeos</a>
+            <a href="#" class="topic-link" data-popup="lessons-popup">Exploring Biblical Lessons: Conecte lições bíblicas ao dia a dia</a>
+            <a href="#" class="topic-link" data-popup="spelling-tools-popup">Spelling Tools: Ferramentas para praticar escrita correta</a>
+            <a href="#" class="topic-link" data-popup="tests-popup">Tests: Avalie seu progresso com testes práticos</a>
         </div>
     </div>
 
-    <!-- Popups com imagens corrigidas -->
-    <div id="storycards-popup" class="popup">
-        <div class="popup-content">
-            <span class="close">&times;</span>
-            <h2>StoryCards</h2>
-            <p>Aprenda inglês com histórias bíblicas...</p>
-            <img src="../imagens/botoes/storycards_button.png" alt="StoryCards">
-        </div>
-    </div>
-    <div id="flashcards-popup" class="popup">
-        <div class="popup-content">
-            <span class="close">&times;</span>
-            <h2>Flashcards</h2>
-            <p>Reforce vocabulário com imagens e palavras...</p>
-            <img src="../imagens/botoes/flashcards_button.png" alt="Flashcards">
-        </div>
-    </div>
-    <div id="memorygame-popup" class="popup">
-        <div class="popup-content">
-            <span class="close">&times;</span>
-            <h2>Memory Game</h2>
-            <p>Melhore vocabulário brincando...</p>
-            <img src="../imagens/botoes/memorygame_button.png" alt="Memory Game">
-        </div>
-    </div>
-    <div id="wordsearch-popup" class="popup">
-        <div class="popup-content">
-            <span class="close">&times;</span>
-            <h2>Word Search</h2>
-            <p>Caça-palavras de vocabulário...</p>
-            <img src="../imagens/botoes/wordsearch_button.png" alt="Word Search">
-        </div>
-    </div>
-    <div id="grammar-popup" class="popup">
-        <div class="popup-content">
-            <span class="close">&times;</span>
-            <h2>Grammar</h2>
-            <p>Domine o inglês em contexto...</p>
-            <img src="../imagens/botoes/grammar_button.png" alt="Grammar">
-        </div>
-    </div>
-    <div id="quizzes-popup" class="popup">
-        <div class="popup-content">
-            <span class="close">&times;</span>
-            <h2>Quizzes</h2>
-            <p>Jogo de perguntas com feedback...</p>
-            <img src="../imagens/botoes/quiz_button.png" alt="Quizzes">
-        </div>
-    </div>
-    <div id="speak-popup" class="popup">
-        <div class="popup-content">
-            <span class="close">&times;</span>
-            <h2>Speak Cards</h2>
-            <p>Pratique pronúncia interativamente...</p>
-            <img src="../imagens/botoes/speak_button.png" alt="Speak Cards">
-        </div>
-    </div>
-    <div id="hannahvideos-popup" class="popup">
-        <div class="popup-content">
-            <span class="close">&times;</span>
-            <h2>HannahVideos</h2>
-            <p>Aprenda com vídeos dinâmicos...</p>
-            <img src="../imagens/botoes/video_button.png" alt="HannahVideos">
-        </div>
-    </div>
-    <div id="lessons-popup" class="popup">
-        <div class="popup-content">
-            <span class="close">&times;</span>
-            <h2>Life Lessons</h2>
-            <p>Conecte lições à vida real...</p>
-            <img src="../imagens/botoes/matching_game_button.png" alt="Matching Game">
-            <img src="../imagens/botoes/life_lessons_button.png" alt="Life Lessons">
-        </div>
-    </div>
-    <div id="spelling-tools-popup" class="popup">
-        <div class="popup-content">
-            <span class="close">&times;</span>
-            <h2>Spelling Tools</h2>
-            <p>Pratique escrita correta...</p>
-            <img src="../imagens/botoes/missing_word_button.png" alt="Missing Words">
-            <img src="../imagens/botoes/mixed_letters_students.png" alt="Mixed Letters">
-        </div>
-    </div>
-    <div id="tests-popup" class="popup">
-        <div class="popup-content">
-            <span class="close">&times;</span>
-            <h2>Tests</h2>
-            <p>Avalie seu progresso com testes...</p>
-            <img src="../imagens/botoes/test.png" alt="Test">
-        </div>
-    </div>
+    <!-- Os popups com imagens já estão corrigidos -->
 
     <script>
         function goBack() {
