--- a/Apresentacao/propaganda_port.html
+++ b/Apresentacao/propaganda_port.html
@@ -71,6 +71,7 @@
             background-color: rgba(0, 0, 0, 0.9);
         }
 
+        /* Popup e conteúdo */
         .popup {
             display: none;
             position: fixed;
@@ -125,15 +126,27 @@
         }
 
         @media (max-width: 600px) {
-            .container h1 { font-size: 2em; }
-            .container p { font-size: 1em; }
-            .links a { font-size: 1em; padding: 10px; }
-            .popup-content { width: 90%; }
+            .container h1 {
+                font-size: 2em;
+            }
+            .container p {
+                font-size: 1em;
+            }
+            .links a {
+                font-size: 1em;
+                padding: 10px;
+            }
+            .popup-content {
+                width: 90%;
+            }
         }
     </style>
 </head>
 <body>
+    <!-- Botão de Voltar -->
     <button class="back-button" onclick="goBack()">BACK</button>
+
+    <!-- Conteúdo principal -->
     <div class="container">
         <h1>Bem-vindo à Sua Jornada de Aprendizado em Inglês</h1>
         <p>
@@ -154,15 +167,163 @@
         </div>
     </div>
 
-    <!-- Os popups com imagens já estão corrigidos -->
+    <!-- Popups -->
 
+    <!-- StoryCards Popup -->
+    <div id="storycards-popup" class="popup">
+      <div class="popup-content">
+        <span class="close">&times;</span>
+        <h2>StoryCards: Aprenda inglês com histórias bíblicas</h2>
+        <p>
+            StoryCards foram criados para ensinar inglês de forma significativa, utilizando histórias bíblicas que conectam gramática, vocabulário e compreensão textual. Cada história é cuidadosamente elaborada para abordar tópicos específicos de gramática e vocabulário, tornando o aprendizado envolvente e relevante.
+        </p>
+        <img src="../imagens/botoes/storycards_button.png" alt="StoryCards">
+      </div>
+    </div>
+
+    <!-- Flashcards Popup -->
+    <div id="flashcards-popup" class="popup">
+      <div class="popup-content">
+        <span class="close">&times;</span>
+        <h2>Flashcards: Reforce o vocabulário de forma interativa</h2>
+        <p>
+            Flashcards reforçam o aprendizado de vocabulário por meio de meios dinâmicos e visuais. Cada cartão exibe uma imagem de um lado e a palavra correspondente do outro, facilitando a memorização e associação.
+        </p>
+        <img src="../imagens/botoes/flashcards_button.png" alt="Flashcards">
+      </div>
+    </div>
+
+    <!-- Memory Game Popup -->
+    <div id="memorygame-popup" class="popup">
+      <div class="popup-content">
+        <span class="close">&times;</span>
+        <h2>Memory Game: Melhore o vocabulário brincando</h2>
+        <p>
+            O Memory Game combina diversão e aprendizado, ajudando os alunos a reforçar o vocabulário e a memorização de palavras por meio de um formato interativo de jogo da memória.
+        </p>
+        <img src="../imagens/botoes/memorygame_button.png" alt="Memory Game">
+      </div>
+    </div>
+
+    <!-- Word Search Popup -->
+    <div id="wordsearch-popup" class="popup">
+      <div class="popup-content">
+        <span class="close">&times;</span>
+        <h2>Word Search: Divirta-se com caça-palavras</h2>
+        <p>
+            Atividades de caça-palavras melhoram o aprendizado de vocabulário, desafiando os alunos a encontrar e reconhecer palavras em uma grade, aprimorando a ortografia e o reconhecimento visual de palavras de forma divertida.
+        </p>
+        <img src="../imagens/botoes/wordsearch_button.png" alt="Word Search">
+      </div>
+    </div>
+
+    <!-- Grammar Popup -->
+    <div id="grammar-popup" class="popup">
+      <div class="popup-content">
+        <span class="close">&times;</span>
+        <h2>Grammar: Domine o inglês no contexto</h2>
+        <p>
+            As lições de gramática são apresentadas de maneira contextualizada e prática, integrando-se ao vocabulário e às histórias para ajudar os alunos a entender e aplicar as regras gramaticais de forma eficaz.
+        </p>
+        <img src="../imagens/botoes/grammar_button.png" alt="Grammar">
+      </div>
+    </div>
+
+    <!-- Quizzes Popup -->
+    <div id="quizzes-popup" class="popup">
+      <div class="popup-content">
+        <span class="close">&times;</span>
+        <h2>Quizzes: Jogo de perguntas interativo</h2>
+        <p>
+            O que é: Um jogo de perguntas voltado para o conteúdo bíblico, linguístico e gramatical de cada lição, com feedback imediato sobre acertos e erros.<br><br>
+            Por que é incrível: Promove uma competição saudável que motiva o aluno a revisar tudo o que aprendeu, tornando o processo de aprendizado mais dinâmico e engajador.
+        </p>
+        <img src="../imagens/botoes/quiz_button.png" alt="Quizzes">
+      </div>
+    </div>
+
+    <!-- Speak Cards Popup -->
+    <div id="speak-popup" class="popup">
+      <div class="popup-content">
+        <span class="close">&times;</span>
+        <h2>Speak Cards: Pratique sua pronúncia com avaliação instantânea</h2>
+        <p>
+            Speak Cards são cartões que mostram imagens e palavras que podem ser ouvidas pelo aluno. Em seguida, o aluno pronuncia a palavra do cartão, e o app avalia se a pronúncia está correta ou errada. Essa ferramenta ajuda a melhorar a confiança e a precisão na fala de maneira prática e divertida.
+        </p>
+        <img src="../imagens/botoes/speak_button.png" alt="Speak Cards">
+      </div>
+    </div>
+
+    <!-- HannahVideos Popup -->
+    <div id="hannahvideos-popup" class="popup">
+      <div class="popup-content">
+        <span class="close">&times;</span>
+        <h2>HannahVideos: Aprendizado dinâmico por meio de vídeos</h2>
+        <p>
+            HannahVideos são centrais para o curso, adaptadas para cada unidade para refletir temas bíblicos, conteúdo gramatical e vocabulário. Esses vídeos envolventes ajudam a reforçar o aprendizado por meio de meios visuais e auditivos.
+        </p>
+        <img src="../imagens/botoes/video_button.png" alt="HannahVideos">
+      </div>
+    </div>
+
+    <!-- Lessons Popup -->
+    <div id="lessons-popup" class="popup">
+      <div class="popup-content">
+        <span class="close">&times;</span>
+        <h2>Exploring Biblical Lessons: Conecte lições bíblicas ao dia a dia</h2>
+        <p>
+            Conecte lições bíblicas a situações reais por meio de Matching Games e atividades de Life Lessons, promovendo a reflexão e a aplicação prática dos valores aprendidos tanto no contexto linguístico quanto espiritual.
+        </p>
+        <img src="../imagens/botoes/matching_game_button.png" alt="Matching Game">
+        <img src="../imagens/botoes/life_lessons_button.png" alt="Life Lessons">
+      </div>
+    </div>
+
+    <!-- Spelling Tools Popup -->
+    <div id="spelling-tools-popup" class="popup">
+      <div class="popup-content">
+        <span class="close">&times;</span>
+        <h2>Spelling Tools: Ferramentas para praticar escrita correta</h2>
+        <p>
+            <strong>1. Missing Words</strong><br>
+            O aluno vê uma imagem e deve escrever corretamente a palavra correspondente.<br>
+            Por que é incrível: Desenvolve a precisão ortográfica e incentiva o pensamento rápido sobre as letras que formam cada vocábulo.<br><br>
+            <strong>2. Mixed Letters</strong><br>
+            O aluno reorganiza letras embaralhadas para formar a palavra correta.<br>
+            Por que é incrível: Treina a memória visual, reforça a ortografia e é uma forma de exercício interativo e desafiador.
+        </p>
+        <img src="../imagens/botoes/missing_word_button.png" alt="Missing Word">
+        <img src="../imagens/botoes/mixed_letters_students.png" alt="Mixed Letters">
+      </div>
+    </div>
+
+    <!-- Tests Popup -->
+    <div id="tests-popup" class="popup">
+      <div class="popup-content">
+        <span class="close">&times;</span>
+        <h2>Tests: Avalie seu progresso com testes práticos</h2>
+        <p>
+            Testes regulares são ferramentas essenciais para avaliar sua compreensão e domínio do material. Eles ajudam a acompanhar seu progresso e identificar áreas que precisam de melhorias.
+        </p>
+        <img src="../imagens/botoes/test.png" alt="Tests">
+      </div>
+    </div>
+
+    <!-- JavaScript -->
     <script>
+        // Botão Voltar
         function goBack() {
             window.history.back();
         }
+
+        // Seleciona todos os links que abrem popups
         const topicLinks = document.querySelectorAll('.topic-link');
+        // Seleciona todos os popups
         const popups = document.querySelectorAll('.popup');
+        // Seleciona todos os botões de fechar
         const closeButtons = document.querySelectorAll('.close');
+
+        // Abre popup ao clicar nos links
         topicLinks.forEach(link => {
             link.addEventListener('click', (e) => {
                 e.preventDefault();
@@ -170,11 +331,15 @@
                 document.getElementById(popupId).style.display = 'flex';
             });
         });
+
+        // Fecha popup ao clicar no X
         closeButtons.forEach(button => {
             button.addEventListener('click', () => {
                 button.parentElement.parentElement.style.display = 'none';
             });
         });
+
+        // Fecha popup ao clicar fora do conteúdo
         window.addEventListener('click', (e) => {
             popups.forEach(popup => {
                 if (e.target === popup) {
